# monolith

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/TextureMorph/: CMakeLists.txt  ColourPlane.cpp  Formula.cpp  MainWindow.cpp  NamedParameter.cpp  ParameterList.cpp  PixelMap.cpp  PointTransform.cpp  ScaledCanvas.cpp  TextureMorph.cpp  Trajectory.cpp  help.txt  main.cpp
app/TextureMorph/ScaledCanvas/: CMakeLists.txt  Graph.cpp
include/app/TextureMorph/: ColourPlane.hpp  Formula.hpp  MainWindow.hpp  NamedParameter.hpp  ParameterList.hpp  PixelMap.hpp  PointTransform.hpp  ScaledCanvas.hpp  TextureMorph.hpp  Trajectory.hpp
include/app/TextureMorph/ScaledCanvas/: Graph.hpp
include/lib/MathExpression/: Term.ParseError.h  Term.h  Variable.ValueMap.h  Variable.h
include/lib/QtUtil/: Grid3DView.hpp  ParameterSlider.hpp
lib/: CMakeLists.txt
lib/MathExpression/: CMakeLists.txt  Term.ParseError.cpp  Term.cpp  Variable.ValueMap.cpp  Variable.cpp
lib/QtUtil/: CMakeLists.txt  Grid3DView.cpp  ParameterSlider.cpp
