CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT (Monolith)

INCLUDE_DIRECTORIES (include)
INCLUDE_DIRECTORIES (include/app)
INCLUDE_DIRECTORIES (include/lib)

ADD_SUBDIRECTORY (app)
ADD_SUBDIRECTORY (lib)

SET (EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/../bin"
	CACHE INTERNAL "Non-configurable executable directory.")
